--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "private": true,
   "homepage": "https://demos.creative-tim.com/black-dashboard-react/#/admin/dashboard",
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@fortawesome/fontawesome-free": "6.4.0",
+    "@mui/material": "^5.15.18",
     "axios": "^1.6.8",
     "bootstrap": "4.6.2",
     "chart.js": "3.9.1",
